--- a/Erick/index.html
+++ b/Erick/index.html
@@ -4,9 +4,9 @@
 		<title>XXXXX in the Web</title>
 	</head>
 	<body>
-		<h2 align="center">Welcome to XXXX's  website</h2>
+		<h2 align="center">Welcome to Eric's  website</h2>
 		<div>
-			<h3>Who i am?</h3>
+			<h3>Who i am? A Mexican</h3>
 			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
 		</div>
 		<div>
