--- a/Cesar/index.html
+++ b/Cesar/index.html
@@ -4,10 +4,10 @@
 		<title>XXXXX in the Web</title>
 	</head>
 	<body>
-		<h2 align="center">Welcome to XXXX's  website</h2>
+		<h2 align="center">Welcome to XxtentationxXs website</h2>
 		<div>
 			<h3>Who i am?</h3>
-			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
+			<p> I am a smash bros player and i take the L when i play Fortnite </p>
 		</div>
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
