--- a/Erick/index.html
+++ b/Erick/index.html
@@ -6,17 +6,17 @@
 	<body>
 		<h2 align="center">Welcome to Eric's  website</h2>
 		<div>
-			<h3>Who i am? A Mexican</h3>
+			<h3>White Mexican</h3>
 			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
 		</div>
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
 			<ul>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
+	  			<li> Get a GF </li>
+	  			<li> Mike Vargas </li>
+	  			<li> Jimmy Doesnt work </li>
+	  			<li> Jimmy So confused </li>
+	  			<li> Mike Vargas asked pam to the movies </li>
 			</ul>  
 		</div>
 	</body>
