--- a/Sofia/index.html
+++ b/Sofia/index.html
@@ -4,7 +4,7 @@
 		<title>XXXXX in the Web</title>
 	</head>
 	<body>
-		<h2 align="center">Welcome to XXXX's  website</h2>
+		<h2 align="center">Welcome to Stephanie's  website</h2>
 		<div>
 			<h3>Who i am?</h3>
 			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
