--- a/Erick/index.html
+++ b/Erick/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>XXXXX in the Web</title>
+		<title>This is a Title</title>
 	</head>
 	<body>
 		<h2 align="center">Welcome to Eric's  website</h2>
 		<div>
 			<h3>White Mexican</h3>
-			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
+			<p> Hi</p>
 		</div>
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
