--- a/Sofia/index.html
+++ b/Sofia/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h2 align="center">Welcome to Stephanie's  website</h2>
 		<div>
-			<h3>Who i am?</h3>
+			<h3>Who i am a sophmore ?</h3>
 			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
 		</div>
 		<div>
