--- a/Rafi/index.html
+++ b/Rafi/index.html
@@ -7,16 +7,16 @@
 		<h2 align="center">Welcome to  Raul</h2>
 		<div>
 			<h3>Who i am?</h3>
-			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
+			<p> I am a mexican gamer and loves food</p>
 		</div>
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
 			<ul>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
+	  			<li> Sleep </li>
+	  			<li> Find a job </li>
+	  			<li> Go to the gym </li>
+	  			<li> Sell tacos </li>
+	  			<li> Become famous </li>
 			</ul>  
 		</div>
 	</body>
