--- a/Erick/index.html
+++ b/Erick/index.html
@@ -12,7 +12,7 @@
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
 			<ul>
-	  			<li> Get a GF </li>
+	  			<li> Ask her out </li>
 	  			<li> Mike Vargas </li>
 	  			<li> Jimmy Doesnt work </li>
 	  			<li> Jimmy So confused </li>
