--- a/Sofia/index.html
+++ b/Sofia/index.html
@@ -6,14 +6,14 @@
 	<body>
 		<h2 align="center">Welcome to Stephanie's  website</h2>
 		<div>
-			<h3>Who i am a sophmore ?</h3>
+			<h3>Who i am a sophmore and i like to swim and play lacrosse ?</h3>
 			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
 		</div>
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
 			<ul>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
+	  			<li> sleep </li>
+	  			<li> have fun </li>
 	  			<li> XXXXX </li>
 	  			<li> XXXXX </li>
 	  			<li> XXXXX </li>
