--- a/Sofia/index.html
+++ b/Sofia/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h2 align="center">Welcome to Stephanie's  website</h2>
 		<div>
-			<h3>Who i am a sophmore and i like to swim and play lacrosse ?</h3>
+			<h3> i'm a sophmore and i like to swim and play lacrosse for my school's team </h3>
 			<p> XXXX XXXXX XXXXX XXXXX XXXXXX XXXXX XXXX</p>
 		</div>
 		<div>
