--- a/Sofia/index.html
+++ b/Sofia/index.html
@@ -14,9 +14,9 @@
 			<ul>
 	  			<li> sleep </li>
 	  			<li> have fun </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
-	  			<li> XXXXX </li>
+	  			<li> manage my time </li>
+	  			<li> go out </li>
+	  			<li> get better at swimming </li>
 			</ul>  
 		</div>
 	</body>
