--- a/Erick/index.html
+++ b/Erick/index.html
@@ -12,11 +12,14 @@
 		<div>
 			<h3>Top 5 goals for 2020: </h3>
 			<ul>
-	  			<li> Ask her out </li>
-	  			<li> Mike Vargas </li>
-	  			<li> Jimmy Doesnt work </li>
-	  			<li> Jimmy So confused </li>
+	  			<li> MIKE VARGAS </li>
+	  			<li> MIKE VARGAS </li>
+	  			<li> MIKE VARGAS </li>
+	  			<li> MIKE VARGAS </li>
 	  			<li> Mike Vargas asked pam to the movies </li>
+				<li> MIKE VARGAS </li>
+				<li> MIKE VARGAS </li>
+				<li>
 			</ul>  
 		</div>
 	</body>
