--- a/Sofia/index.html
+++ b/Sofia/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>XXXXX in the Web</title>
 	</head>
-	<body>
+	<body style="background-color: #456793;">
 		<h2 align="center">Welcome to Stephanie's  website</h2>
 		<div>
 			<h3> i'm a sophmore and i like to swim and play lacrosse for my school's team </h3>
